@@ -1354,6 +1354,11 @@ EXTRA_DIST = \
   poke.pkl/field-init-diag-5.pk \
   poke.pkl/field-init-diag-6.pk \
   poke.pkl/field-init-diag-7.pk \
+  poke.pkl/flush-1.pk \
+  poke.pkl/flush-2.pk \
+  poke.pkl/flush-3.pk \
+  poke.pkl/flush-4.pk \
+  poke.pkl/flush-5.pk \
   poke.pkl/for-1.pk \
   poke.pkl/for-2.pk \
   poke.pkl/for-3.pk \
