@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command { try flush (10, 0#B); catch if E_io { print "caught\n"; } } } */
+/* { dg-output "caught" } */
