@@ -1,0 +1,6 @@
+/* { dg-do run } */
+
+var stderr = open ("<stderr>");
+
+flush (stderr, 0#B);
+close (stderr);
